# backend/src/main/java/com/reday/auth/response/AuthResponseCode.java
@@ -14,7 +14,8 @@ public enum AuthResponseCode implements ResponseCode {
 	TOKEN_REFRESHED("AUTH_TOKEN_REFRESHED", "토큰이 재발급되었습니다."),
 	LOGOUT_SUCCESS("AUTH_LOGOUT_SUCCESS", "로그아웃되었습니다."),
 	EMAIL_SENT("AUTH_EMAIL_SENT", "인증코드를 발송했습니다."),
-	EMAIL_VERIFIED("AUTH_EMAIL_VERIFIED", "이메일 인증이 완료되었습니다.");
+	EMAIL_VERIFIED("AUTH_EMAIL_VERIFIED", "이메일 인증이 완료되었습니다."),
+	PASSWORD_RESET_VERIFICATION_SENT("AUTH_PASSWORD_RESET_VERIFICATION_SENT", "비밀번호 재설정 인증코드를 발송했습니다.");
 
 	private final String code;
 	private final String message;
